test/interp/spec/func-local-before-result.fail.txt
;;; ERROR: 1
;;; TOOL: run-interp-spec
;;; STDIN_FILE: third_party/testsuite/func-local-before-result.fail.wast
(;; STDERR ;;;
Error running "sexpr-wasm":
third_party/testsuite/func-local-before-result.fail.wast:1:28: syntax error, unexpected RESULT
(module (func (local i32) (result i32) (get_local 0)))
                           ^^^^^^

;;; STDERR ;;)
